# sheduler

./: .gitignore  README.md  package-lock.json  package.json
ai-service/: README.md  pyproject.toml  requirements.txt
ai-service/app/: main.py  models.py  providers.py  schemas.py  service.py  store.py
ai-service/tests/: test_service.py
backend/: package.json
backend/prisma/: schema.prisma  seed.mjs
backend/scripts/: lint.mjs  validate-migrations.mjs
backend/src/: app.js
backend/test/: ai-parse-job-service.test.js  api-ai-parse-jobs.test.js  api-availability.test.js  api-branding.test.js  api-events.test.js  api-external-calendars.test.js  api-notifications.test.js  api-observability.test.js  api-organizations.test.js  api-queue.test.js  api-realtime.test.js  api-recurrence.test.js  api-scheduling.test.js  api-tools.test.js  app.test.js  audit-service.test.js  auth.test.js  availability-service.test.js  branding-service.test.js  event-bus.test.js  event-service.test.js  external-calendar-service.test.js  metrics-service.test.js  migration-validate.test.js  notification-service.test.js  organization-service.test.js  prisma-availability-store.test.js  prisma-event-store.test.js  prisma-notification-store.test.js  prisma-organization-store.test.js  prisma-queue-store.test.js  prisma-scheduling-store.test.js  prisma-seed.test.js  queue-service.test.js  recurrence-service.test.js  (+3 more)
dashboards/: grafana-scheduler.json
docs/: CODES.md  feasibility_and_plan.md
frontend/: index.html  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
(+56 files in other folders)
