[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scheduler-ai-service"
version = "0.1.0"
description = "AI parsing microservice for scheduler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn==0.30.1",
  "pydantic==2.7.4",
  "python-multipart==0.0.9",
  "httpx==0.27.0"
]

[project.optional-dependencies]
dev = ["pytest==8.2.2"]
